--- a/code/SensorLogger/AndroidManifest.xml
+++ b/code/SensorLogger/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-     package="uk.co.md87.android.sensorlogger" android:versionCode="17" android:versionName="0.2.4">
+     android:versionCode="17" android:versionName="0.2.4" package="aus.csiro.justin.sensorlogger">
     <application android:label="Sensor Logger" android:icon="@drawable/icon">
         <activity android:name=".activities.IntroActivity" android:label="Sensor Logger">
             <intent-filter>
